update package name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.stagezerowithoutdagger"
+        applicationId "com.example.androidpractise"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
