--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,14 @@
     package="com.example.androidpractise">
 
     <application
+        android:name=".stagezerowithoutdagger.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.androidpractise.stagezerowithoutdagger.ui.MainActivity">
+        <activity android:name="com.example.androidpractise.stagethreewithdagger.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
